@@ -1,3 +1,9 @@
+[b][color=orange]v4.74[/color], xx.xx.2021[/b][list]
+[*]Added Shadows around the most frames (WIP)
+[*]Added Grappling Growth to the Vignette Blacklist
+[*]Remove Talent Set Manager, there will be an own AddOn in the future
+[*]Updated some skins[/list]
+
 [b][color=orange]v4.73[/color], 10.03.2021[/b][list]
 [*]Added an OmniCD Profile
 [*]Added a Talent Set Manager. Credits fang2hou <3
